--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
     <title>Научиться учиться</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="stylesheet" href="./styles/fonts.css" />
-    <link rel="stylesheet" href="styles/normalize.css" />
   </head>
   <body>
-    <div class="page">
-
+    <main class="page">
       <header class="header">
         <div class="logo logo_place_header">
           <img
@@ -116,7 +113,7 @@
               src="images/cards-competence.png"
               alt="competence image"
             />
-            <h4 class="cards__title">Иллюзия компетентности</h3>
+            <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">
               Повторите про себя, запишите, расскажите другу: вам только
               кажется, что вы владеете новой темой.
@@ -130,23 +127,17 @@
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
           <iframe
-            class="iframe"
-            id="ytplayer"
-            type="text/html"
+            class="video__iframe"
             width="515"
             height="316"
             src="https://www.youtube.com/embed/M7lc1UVf-VE"
-            frameborder="0"
             allowfullscreen
           ></iframe>
           <iframe
-            class="iframe"
-            id="ytplayer"
-            type="text/html"
+            class="video__iframe"
             width="515"
             height="316"
             src="https://www.youtube.com/embed/5MgBikgcWnY"
-            frameborder="0"
             allowfullscreen
           ></iframe>
         </div>
@@ -185,13 +176,13 @@
             <h4 class="table__heading">2.1 миллиарда</h4>
             <p class="table__text">
               Число нуждающихся в повышении квалификации
-              <p class="table__text">Всемирный Банк, 2017</p>
             </p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
             <h4 class="table__heading">1000 терабайт</h4>
-            <p class="table__text">Объём памяти человека</div>
-            </p>
+            <p class="table__text">Объём памяти человека</p>
+          </div>
           <div class="table__cell">
             <h4 class="table__heading">500 триллионов</h4>
             <p class="table__text">
@@ -204,21 +195,23 @@
             <p class="table__text">
               Число взрослых людей моложе 25 лет, не имеющих образования для
               трудоустройства
-              <p>Всемирный Банк, 2017</p>
             </p>
+            <p>Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h4 class="table__heading">86 миллиардов</h4>
-            <p class="table__text">Число нейронов в мозге человека</div>
-            </p>
+            <h4 class="table__heading">17–20 лет</h4>
+            <p class="table__text">Пик обучаемости</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </div>
           <div class="table__cell">
-            <h4 class="table__heading">86 миллиардов</h4>
-            <p class="table__text">Число нейронов в мозге человека</div>
-            </p>
+            <h4 class="table__heading">1885 год</h4>
+            <p class="table__text">Открытие кривой забывания</p>
+          </div>
+
           <div class="table__cell">
-            <h4 class="table__heading">86 миллиардов</h4>
-            <p class="table__text">Число нейронов в мозге человека</div>
-            </p>
+            <h4 class="table__heading">1889 год</h4>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </div>
         </div>
       </section>
 
@@ -258,15 +251,11 @@
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">2</h4>
-            <p class="table__text">
-              Сосредоточьтесь на каком-то одном навыке.
-            </p>
+            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">3</h4>
-            <p class="table__text">
-              Определите целевой уровень мастерства.
-            </p>
+            <p class="table__text">Определите целевой уровень мастерства.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">4</h4>
@@ -274,9 +263,7 @@
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">5</h4>
-            <p class="table__text">
-              Приготовьте всё необходимое для занятий.
-            </p>
+            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">6</h4>
@@ -291,9 +278,7 @@
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">8</h4>
-            <p class="table__text">
-              Выделите специальное время для занятий.
-            </p>
+            <p class="table__text">Выделите специальное время для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">9</h4>
@@ -304,9 +289,7 @@
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">10</h4>
-            <p class="table__text">
-              Уделяйте внимание количеству и скорости.
-            </p>
+            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
         <img
@@ -401,6 +384,6 @@
           </div>
         </div>
       </footer>
-    </div>
+    </main>
   </body>
 </html>
