--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <div class="footer__columns">
           <div class="footer__column footer__column_content_copyright">
             <div class="logo logo_place_footer"></div>
-            <div class="footer__author">&copy; blanksearch</div>
+            <p class="footer__author">&copy; blanksearch</p>
           </div>
           <div class="footer__column footer__column_content_info">
             <h2 class="footer__column-heading">О Практикуме</h2>
